--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>Potato Weather</title>
   <link href="style.css" rel="stylesheet">
   <script type="module" src="./scripts/main.js" defer></script>
+  <base href="/top-weather-app/">
+
 </head>
 
 <body>
